--- a/main.css
+++ b/main.css
@@ -25,3 +25,16 @@ a {
     color: green; 
     text-decoration: none;
 }
+a:visited {
+    color: rgb(220, 93, 38);
+}
+a:hover {
+    color: red;
+    text-decoration: underline;
+    background-color: white;
+    font-weight: bold;
+}
+a:active {
+    color: pink;
+    background-color: green;
+}
