--- a/main.css
+++ b/main.css
@@ -6,14 +6,14 @@ body {
 }
 
 header {
-    background-color: rgb(0, 0, 0);
+    background: linear-gradient(to right, red, orange, yellow,green,blue,darkblue,purple);
     color: rgb(147, 244, 181);
     padding: 10px;
     font-size: 16pt;
 }
 
 footer {
-    background-color: rgb(0, 0, 0);
+    background: linear-gradient(to right, red, orange, yellow,green,blue,darkblue,purple);
     color: rgb(147, 244, 181);
     padding: 10px;
     font-size: 16pt;
