--- a/main.css
+++ b/main.css
@@ -24,6 +24,7 @@ footer {
 a {
     color: green; 
     text-decoration: none;
+    transition: 2s;
 }
 a:visited {
     color: rgb(220, 93, 38);
@@ -33,6 +34,8 @@ a:hover {
     text-decoration: underline;
     background-color: white;
     font-weight: bold;
+    transition: 0.3s;
+    text-shadow: 3px 3px 2px black;
 }
 a:active {
     color: pink;
